mongoose host house user collections

--- a/public/stylesheets/iconfont/demo_fontclass.html
+++ b/public/stylesheets/iconfont/demo_fontclass.html
@@ -31,6 +31,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-xyfanhui01"></i>
+                    <div class="name">xy返回</div>
+                    <div class="fontclass">.icon-xyfanhui01</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-xihuan"></i>
                     <div class="name">喜欢</div>
                     <div class="fontclass">.icon-xihuan</div>
