--- a/public/stylesheets/iconfont/demo_symbol.html
+++ b/public/stylesheets/iconfont/demo_symbol.html
@@ -53,6 +53,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-xyfanhui01"></use>
+                    </svg>
+                    <div class="name">xy返回</div>
+                    <div class="fontclass">#icon-xyfanhui01</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-xihuan"></use>
                     </svg>
                     <div class="name">喜欢</div>
