--- a/public/stylesheets/iconfont/demo_unicode.html
+++ b/public/stylesheets/iconfont/demo_unicode.html
@@ -51,6 +51,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe61d;</i>
+                    <div class="name">xy返回</div>
+                    <div class="code">&amp;#xe61d;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe699;</i>
                     <div class="name">喜欢</div>
                     <div class="code">&amp;#xe699;</div>
