--- a/public/stylesheets/iconfont/demo_fontclass.html
+++ b/public/stylesheets/iconfont/demo_fontclass.html
@@ -25,6 +25,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-dengluyonghu"></i>
+                    <div class="name">登录-用户</div>
+                    <div class="fontclass">.icon-dengluyonghu</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-feiyong"></i>
                     <div class="name">费用</div>
                     <div class="fontclass">.icon-feiyong</div>
