--- a/public/stylesheets/iconfont/demo_symbol.html
+++ b/public/stylesheets/iconfont/demo_symbol.html
@@ -45,6 +45,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-dengluyonghu"></use>
+                    </svg>
+                    <div class="name">登录-用户</div>
+                    <div class="fontclass">#icon-dengluyonghu</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-feiyong"></use>
                     </svg>
                     <div class="name">费用</div>
