--- a/public/stylesheets/iconfont/demo_unicode.html
+++ b/public/stylesheets/iconfont/demo_unicode.html
@@ -45,6 +45,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe632;</i>
+                    <div class="name">登录-用户</div>
+                    <div class="code">&amp;#xe632;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe682;</i>
                     <div class="name">费用</div>
                     <div class="code">&amp;#xe682;</div>
