--- a/public/stylesheets/iconfont/demo_fontclass.html
+++ b/public/stylesheets/iconfont/demo_fontclass.html
@@ -126,6 +126,12 @@
                     <div class="fontclass">.icon-icon</div>
                 </li>
             
+                <li>
+                <i class="icon iconfont icon-menu"></i>
+                    <div class="name">菜单</div>
+                    <div class="fontclass">.icon-menu</div>
+                </li>
+            
         </ul>
 
         <h2 id="font-class-">font-class引用</h2>
