--- a/public/stylesheets/iconfont/demo_symbol.html
+++ b/public/stylesheets/iconfont/demo_symbol.html
@@ -179,6 +179,14 @@
                     <div class="fontclass">#icon-icon</div>
                 </li>
             
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-menu"></use>
+                    </svg>
+                    <div class="name">菜单</div>
+                    <div class="fontclass">#icon-menu</div>
+                </li>
+            
         </ul>
 
 
