--- a/public/stylesheets/iconfont/demo_unicode.html
+++ b/public/stylesheets/iconfont/demo_unicode.html
@@ -146,6 +146,12 @@
                     <div class="code">&amp;#xe60f;</div>
                 </li>
             
+                <li>
+                <i class="icon iconfont">&#xe605;</i>
+                    <div class="name">菜单</div>
+                    <div class="code">&amp;#xe605;</div>
+                </li>
+            
         </ul>
         <h2 id="unicode-">unicode引用</h2>
         <hr>
