--- a/public/stylesheets/iconfont/demo_unicode.html
+++ b/public/stylesheets/iconfont/demo_unicode.html
@@ -153,6 +153,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe617;</i>
+                    <div class="name">关闭</div>
+                    <div class="code">&amp;#xe617;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe68b;</i>
                     <div class="name">邮箱</div>
                     <div class="code">&amp;#xe68b;</div>
