--- a/public/stylesheets/iconfont/demo_fontclass.html
+++ b/public/stylesheets/iconfont/demo_fontclass.html
@@ -133,6 +133,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-33"></i>
+                    <div class="name">关闭</div>
+                    <div class="fontclass">.icon-33</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-youxiang"></i>
                     <div class="name">邮箱</div>
                     <div class="fontclass">.icon-youxiang</div>
