--- a/public/stylesheets/iconfont/demo_symbol.html
+++ b/public/stylesheets/iconfont/demo_symbol.html
@@ -189,6 +189,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-33"></use>
+                    </svg>
+                    <div class="name">关闭</div>
+                    <div class="fontclass">#icon-33</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-youxiang"></use>
                     </svg>
                     <div class="name">邮箱</div>
